# nova-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/chatbot/: chat.py  chat_memory.py  system_prompt.txt
src/nova_memory/: __init__.py
src/nova_memory.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nova_memory/_db/db/: migrate.py  nova_db.py  schema.sql
src/nova_memory/_db/repositories/: chat_memory_repo.py  contextual_memory_repo.py  conversations_memory_repo.py  core_memory_repo.py
src/nova_memory/_db/util/: db_path_config.py
src/nova_memory/memory/: chat_memory.py  contextual_memory.py  conversations_memory.py  core_memory.py
src/novadb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
